@@ -143,6 +143,7 @@ typedef struct include_filter_ctx {
     int          bytes_parsed;
     apr_status_t status;
     int          output_now;
+    int          output_flush;
     
     apr_bucket   *head_start_bucket;
     apr_size_t   head_start_index;
@@ -206,6 +207,9 @@ if ((APR_BRIGADE_EMPTY(cntxt->ssi_tag_brigade)) &&                \
     apr_bucket_brigade *tag_plus;                                 \
                                                                   \
     tag_plus = apr_brigade_split(brgd, cntxt->head_start_bucket); \
+    if (cntxt->output_flush) {                                    \
+        APR_BRIGADE_INSERT_TAIL(brgd, apr_bucket_flush_create()); \
+    }                                                             \
     rc = ap_pass_brigade(next, brgd);                             \
     cntxt->bytes_parsed = 0;                                      \
     brgd = tag_plus;                                              \
